--- a/Zbang.Cloudents.Connect/packages.config
+++ b/Zbang.Cloudents.Connect/packages.config
@@ -5,20 +5,21 @@
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net451" />
   <package id="Autofac.SignalR" version="3.0.2" targetFramework="net451" />
   <package id="jQuery" version="2.2.4" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights" version="2.3.0" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.3.0" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.1" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.4.1" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.TraceListener" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.3.0" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.3.0" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.4.1" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.4.1" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.4.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.ServiceBus3" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.2" targetFramework="net462" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net462" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net462" />
@@ -34,6 +35,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net462" />
   <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net462" />
   <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net462" />
   <package id="System.Net.Requests" version="4.0.11" targetFramework="net462" />
