--- a/Zbang.Cloudents.Mvc2Jared/packages.config
+++ b/Zbang.Cloudents.Mvc2Jared/packages.config
@@ -16,17 +16,18 @@
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net462" />
   <package id="jQuery.Validation" version="1.15.0" targetFramework="net462" />
   <package id="Lqs.Autofac.Mvc5.Owin" version="3.1.1" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights" version="2.3.0" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.3.0" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.1" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.4.1" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.TraceListener" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.3.0" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.3.0" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.4.1" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.4.1" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.4.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net462" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net462" />
@@ -41,5 +42,6 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net462" />
   <package id="WebGrease" version="1.5.2" targetFramework="net462" />
 </packages>
