--- a/Zbang.Cloudents.Mvc4WebRole/packages.config
+++ b/Zbang.Cloudents.Mvc4WebRole/packages.config
@@ -27,21 +27,22 @@
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.15.0" targetFramework="net451" />
   <package id="log4net" version="2.0.5" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights" version="2.3.0" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.1" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.Log4NetAppender" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.4.1" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.TraceListener" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.3.0" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.3.0" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.4.1" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.4.1" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.4.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.2" targetFramework="net462" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
@@ -66,6 +67,7 @@
   <package id="SquishIt" version="0.9.9" targetFramework="net462" />
   <package id="StackExchange.Redis.StrongName" version="1.2.4" targetFramework="net462" />
   <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net462" />
   <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net462" />
   <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net462" />
   <package id="System.Net.Requests" version="4.0.11" targetFramework="net462" />
